--- a/assets/app.css
+++ b/assets/app.css
@@ -1,6 +1,6 @@
-*{
+/**{
   border: 2px black dotted;
-}
+}*/
 #topbar{
   background: #d633ff;
   top:0%;
@@ -131,7 +131,35 @@
   left:75%;
   top:0%;
 }
-#fightclub{
+#gamesone{
+  position: absolute;
+  width:25%;
+  height: 100%;
+  left:0%;
+  top:0%;
+}
+#gamesTwo{
+  position: absolute;
+  width:25%;
+  height: 100%;
+  left:25%;
+  top:0%;
+}
+#gamesThree{
+  position: absolute;
+  width:25%;
+  height: 100%;
+  left:50%;
+  top:0%;
+}
+#gamesFour{
+  position: absolute;
+  width:25%;
+  height: 100%;
+  left:75%;
+  top:0%;
+}
+.fightclub{
   position: absolute;
   width:70%;
   height: 80%;
@@ -140,6 +168,7 @@
   bottom: 10%;
   right: 15%;
   border-radius: 20px;
+  box-shadow: 3px 3px 3px #000;
 }
 
 /* media queries*/
